# EntSnap

./: .ccls  .gitignore  CMakeLists.txt  Makefile  testout
include/: raygui.h
src/: App.cpp  App.hpp  Component.cpp  Component.hpp  Consts.hpp  CustomGuis.cpp  CustomGuis.hpp  Entity.cpp  Entity.hpp  GuiFileDialog.cpp  GuiFileDialog.hpp  Project.hpp  SidePanel.cpp  SidePanel.hpp  main.cpp
